--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "competitors/ts"]
 	path = competitors/ts
 	url = https://github.com/stoianmihail/TrieSpline.git
+[submodule "ittapi"]
+	path = ittapi
+	url = https://github.com/intel/ittapi
